--- a/docs/.vitepress/theme/styles/home.pcss
+++ b/docs/.vitepress/theme/styles/home.pcss
@@ -3,19 +3,15 @@
     --vp-home-hero-name-background: linear-gradient(
         -30deg,
         var(--vp-button-brand-bg) 30%,
-        var(--vp-button-brand-hover-bg)
+        var(--vp-button-brand-active-bg)
     );
 
-    --vp-home-hero-image-background-image-opacity: 40%;
-    --vp-home-hero-image-background-image: linear-gradient(
-        rgb(62 99 221 / var(--vp-home-hero-image-background-image-opacity)) 50%,
-        rgb(62 99 221 / var(--vp-home-hero-image-background-image-opacity)) 50%
+    --vp-home-hero-image-background-image: radial-gradient(
+        closest-side,
+        var(--vp-c-bg) 15%,
+        rgb(62 99 221)
     );
     --vp-home-hero-image-filter: blur(40px);
-}
-
-html:not(.dark):root {
-    --vp-home-hero-image-background-image-opacity: 20%;
 }
 
 .text {
@@ -24,4 +20,8 @@ html:not(.dark):root {
 
 .tagline {
     text-wrap: pretty !important;
+}
+
+.image-bg {
+    top: calc(50% - 6%) !important;
 }
