--- a/docs/.vitepress/theme/styles/home.pcss
+++ b/docs/.vitepress/theme/styles/home.pcss
@@ -14,6 +14,10 @@
     --vp-home-hero-image-filter: blur(40px);
 }
 
+html:not(.dark):root {
+    --vp-home-hero-image-background-image: ;
+}
+
 .text {
     text-wrap: balance !important;
 }
