Fixed nav styles

--- a/docs/.vitepress/theme/styles/nav.pcss
+++ b/docs/.vitepress/theme/styles/nav.pcss
@@ -1,4 +1,4 @@
-.link {
+.VPMenu .VPLink {
     /* NOTE: For RTL this may need to be updated */
-    padding-right: calc(12px * 3);
+    padding-right: calc(12px * 3) !important;
 }
