--- a/docs/.vitepress/theme/styles/sponsors.pcss
+++ b/docs/.vitepress/theme/styles/sponsors.pcss
@@ -6,11 +6,11 @@
     margin-top: 4px;
 }
 
-.vp-sponsor-grid.xmini {
+/* .vp-sponsor-grid.xmini {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(4rem, 1fr));
-}
+} */
 
-.vp-sponsor-grid.xmini .vp-sponsor-grid-item {
+/* .vp-sponsor-grid.xmini .vp-sponsor-grid-item {
     width: 100%;
-}
+} */
